--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,7 @@
 language: ruby
 rvm:
-  - 1.9.3
-  - 2.0.0
-script: bundle exec rake spec:coverage
+  - 2.3.0
+script: bundle exec rake spec:ci
 gemfile: .travis-gemfile
 notifications:
   email: false
